--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,11 @@
 }
 
 .hidden-video {
-  display: none;
+  opacity: 0;
+  position: absolute;
+  pointer-events: none;
+  width: 1px;
+  height: 1px;
 }
 
 .film-viewport::after {
