--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,10 @@
 }
 
 .hidden-video {
-  display: none;
+  position: absolute;
+  top: -10000px;
+  left: -10000px;
+  opacity: 0;
 }
 
 .film-viewport::after {
