--- a/src/App.css
+++ b/src/App.css
@@ -96,8 +96,8 @@
 }
 
 .negative-preview {
-  filter: contrast(1.8) brightness(0.7) saturate(1.2);
-  mix-blend-mode: multiply;
+  /* filter: contrast(1.8) brightness(0.7) saturate(1.2);
+  mix-blend-mode: multiply; */
   width: 100%;
   display: block;
 }
